--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a-sphere radius='.2' color='yellow'></a-sphere>
     </a-light>
     
-    <a-entity position='0 0 0' scale='1 1 1' obj-model='obj: Ally1.obj; mtl: Ally1.mtl' bake-vertex-light></a-entity>
+    <a-entity position='0 0 0' scale='1 1 1' obj-model='obj: Alley1.obj; mtl: Alley1.mtl' bake-vertex-light></a-entity>
   </a-scene>
   <script>
   
