--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <a-scene altspace='fullspace: true'>
+      <a-entity position='-9.8 7 2.5' scale='10 10 10' n-layout-browser='url: https://video-jukebox.firebaseapp.com/; isEnclosure: false'></a-entity>
     <a-light type="point" position="-5 20 5" intensity="100">
       <a-sphere radius='.2' color='yellow'></a-sphere>
     </a-light>
