--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <a-scene altspace='fullspace: true'>
-      <a-entity position='-11.6 8 2.5' scale='12 12 12' n-layout-browser='url: https://video-jukebox.firebaseapp.com/; isEnclosure: false'></a-entity>
+      <a-entity position='-11.6 8 2.5' scale='12 12 12' rotation="0 90 0" n-layout-browser='url: https://video-jukebox.firebaseapp.com/; isEnclosure: false'></a-entity>
     <a-light type="point" position="-5 20 5" intensity="100">
       <a-sphere radius='.2' color='yellow'></a-sphere>
     </a-light>
